static/css/index.css
/* Universal styles */
html, body {
  background-color: #28373e;
  font-family: 'Lato';
}

p {
  font-size: 14px;
  line-height: 1.93;
  letter-spacing: 0.3px;
}

span.bold {
  font-weight: 700;
}

/* Section styles */

div.section-content {
  padding-top: 5rem;
  padding-bottom: 5rem;
}

@media (min-width: 768px) {
  div.section-content {
    padding-top: 9rem;
    padding-bottom: 9rem;
  }
}

div.section-dark {
  color: white;
}

div.section-light {
  background: white;
  color: black;
}

div.section-grey {
  background-color: #f6f7fa;
  color: black;
}

/* Section title styles */

h2.section-title {
  font-size: 27px;
  line-height: normal;
  letter-spacing: 4.9px;
}

h3.numeral {
  font-family: 'Roboto Mono';
  font-size: 24px;
  font-weight: 300;
  line-height: 1.79;
  margin-bottom: 0px;
}

/* Navbar */

#navbar-expandable a.nav-link {
  color: white;
  font-family: 'Lato';
  font-size: 12px;
  letter-spacing: 2.2px;
  font-weight: 300;
  margin-right: 55px;
}

div#community-dropdown {
  background: #1d292e;
  border-radius: 0px;
}

#community-dropdown a.dropdown-item,
#community-dropdown a.dropdown-item:hover,
#community-dropdown a.dropdown-item:focus {
  font-size: 14px;
  font-family: 'Lato';
  line-height: 1.93;
  letter-spacing: 0.3px;
  text-decoration: none;
  background: transparent;
  cursor: pointer;
  color: white;
}

#community-dropdown img {
  padding-right: 0.5rem;
}

/* Hero Section */

#hero-container {
  background: url('../../static/img/gryphon-bg-hero.png') no-repeat;
  background-position: right 70px bottom;
}

h1 {
  font-size: 20px;
  font-weight: 300;
  letter-spacing: 3.6px;
  color: #30c3e0;
}

p#pull-quote {
  margin-top: 33px;
  font-size: 17px;
  font-weight: 100;
  line-height: normal;
  letter-spacing: normal;
}

span.pull-quote-highlight {
  font-weight: 400;
}

span#pip-install p {
  margin-bottom: 35px;
  padding-left: 18px;
  padding-top: 13px;
  padding-bottom: 13px;
  border-radius: 2px;
  background-color: rgba(255, 255, 255, 0.03);
  font-family: 'Roboto Mono';
  font-size: 18px;
  font-weight: 300;
  line-height: 1.5;
  letter-spacing: 0.4px;
  color: #ffffff;
}

.gryphon-btn, .gryphon-btn:hover, .gryphon-btn:visited {
  border: 1px rgba(255, 255, 255, 0.6);
  font-size: 12px;
  font-weight: 300;
  line-height: normal;
  letter-spacing: 2.2px;
  color: #ffffff;
  text-decoration: none;
  border: 1px solid rgba(255, 255, 255, 0.6);
}

#download-btn, #docs-btn {
  width: 200px;
  height: 53px;
}

.btn-highlight {
  background-color: #30c3e0;
  margin-right: 20px;
}

img.dl-icon {
  float: left;
  padding-top: 19px;
  padding-left: 21px;
  padding-bottom: 18px;
  padding-right: 18px;
  border-right: 1px solid rgba(255, 255, 255, 0.1);
}

img.docs-icon {
  float: left;
  padding-top: 19px;
  padding-left: 21px;
  padding-bottom: 16px;
  padding-right: 20px;
  border-right: 1px solid rgba(255, 255, 255, 0.1);
}

p.btn-text {
  float: left;
  margin-left: 26px;
  margin-top: 19px;
  letter-spacing: inherit;
  font-size: inherit;
  line-height: inherit;
}

/* History Section */

div#history h2 {
  padding-top: 5rem;
  padding-bottom: 5rem;
  font-size: 20px;
  line-height: normal;
  letter-spacing: 3.6px;
  text-align: center;
}

/* Strategies Section */

#strategies h2 {
  margin-bottom: 90px;
}

#strategies h4 {
  font-size: 21px;
  font-weight: 300;
  line-height: 2.05;
  color: #30c3e0;
}

#strategies p.descriptor {
  font-weight: 300;
}

#strat-buttons {
  text-align: center;
}

#strat-buttons a {
  display: inline-block;
  padding-top: 17px;
  text-align: center;
  font-size: 11px;
  line-height: normal;
  letter-spacing: normal;
}

#mm-button {
  width: 300px;
  height: 50px;
  margin-right: 0px;
}

#arb-button {
  width: 250px;
  height: 50px;
  margin-left: -5px;
  border-left: none;
}

@media (max-width: 767px) {
  div#code-example-col {
    overflow: hidden;
  }

  #strategies img {
    max-width: unset;
    height: 420px;
  }
}

/* Integrations */

div#integrations h2 {
  margin-bottom: 70px;
}

div#integrations p {
  font-weight: 300;
  margin-left: auto;
  margin-right: auto;
}

/* Accounting Section */

div#accounting {
  padding-bottom: 0rem;
}

p#accounting-desc {
  margin-bottom: 43px;
}

/* Robust Section */

div#robust h3 {
  display: block;
  color: #23bbd9;
}

div#robust h2 {
  color: #23bbd9;
  margin-bottom: 40px;
}

div#robust p#robust-desc {
  width: 357px;
  margin-bottom: 60px;
}

div#robust-points div.col {
  height: 155px;
  padding-left: 26px;
  border-left: 2px solid #808fa3;
}

div#robust-points div.col h4 {
  font-size: 42px;
  line-height: normal;
  letter-spacing: 7.6px;
  color: #23bbd9;
}

p.metric-subtitle, div#integrations p.metric-subtitle {
  font-size: 12px;
  line-height: normal;
  letter-spacing: 2.2px;
  color: #616a6d;
}

#robust-points img {
  margin-bottom: 56px;
}

div#robust-points {
  margin-bottom: 150px;
}

div#robust-uptime h5 {
  font-size: 20px;
  letter-spacing: 3.6px;
}


/* Dashboards Section */

/*
Current approach to image positioning:
  - 9rem from the top (in line with the heading)
  - add padding to the bottom of 10% at the lg breakpoint, 20% at the xl breakpoint.

This works ok enough, although it's quite a lot of code.
*/

@media (min-width: 768px) {
  #dashboards-container {
    background-image: url('../../static/img/dashboards.png');
    background-repeat: no-repeat;
    background-position: right 9rem;
    background-size: 50%;
  }
}

@media (min-width: 992px) {
  #dashboards-container {
    padding-bottom: 10%;
  }
}

@media (min-width: 1200px) {
  #dashboards-container {
    padding-bottom: 20%;
  }
}

#dashboards h2.section-title {
  margin-bottom: 47px;
}

#dashboards p {
  font-weight: 300;
}

div#dashboard-image-col {
  padding-right: 0px;
}

/* Fund Section */

/*
Show the background image on md- and larger screens, otherwise we use the img element.
*/
@media (min-width: 768px) {
  #fund-container {
    background-image: url('../../static/img/fund.png');
    background-repeat: no-repeat;
    background-position: center right;
    background-size: 50%;
  }
}

#fund h2.section-title {
  margin-bottom: 47px;
}

#fund p#fund-desc {
  margin-bottom: 53px;
}

#fund img#net-assets {
  margin-right: -15px;  /* place it right on the edge */
}

ul#fund-features {
  list-style: none;
  padding: 40px;
  border: 1px solid #77cad9;
  letter-spacing: 0.3px;
}

#fund-features h5 {
  font-size: 13px;
  font-weight: normal;
  line-height: 2.08;
  color: #30c3e0;
  margin-bottom: 34px;
}

ul#fund-features li {
  font-size: 14px;
  line-height: 3.07;
}

ul#fund-features li span.point {
  font-family: 'Roboto Mono';
  line-height: 2.87;
  color: #30c3e0;
  font-size: 15px;
  font-weight: 300;
  margin-right: 22px;
}

div#fund-image-col {
  /* This sets the image at the right border on small screens and has no effect on md-
     and above screens.
  */
  padding-right: 0px;
}

/* Footer Section */

div#footer-container {
  background: url('../../static/img/gryphon-bg-footer.png') no-repeat;
  background-position: right 10px bottom;
}

#footer-footer p {
  width: 500px;
  height: 27px;
  opacity: 0.4;
  font-weight: 300;
  margin-left: 38px;
}

